<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >

	<Button
	    android:id="@+id/okbutton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/Close" />

	<TextView
	    android:id="@+id/text1"
	    android:layout_width="90dp"
	    android:layout_height="90dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textView"
	    android:layout_marginTop="81dp"
	    android:layout_toRightOf="@+id/operator"
	    android:gravity="center_vertical|center"
	    android:text="@string/hello"
	    android:textSize="32sp" />

	<TextView
	    android:id="@+id/operator"
	    android:layout_width="100dp"
	    android:layout_height="90dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignTop="@+id/text1"
	    android:gravity="center_vertical|center"
	    android:text="@string/Operator"
	    android:textSize="32sp" />

	<TextView
	    android:id="@+id/textView"
	    android:layout_width="fill_parent"
	    android:layout_height="90dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:gravity="center_vertical|center"
	    android:text="@string/hello_world"
	    android:textSize="32sp" />

	<Button
	    android:id="@+id/answer1"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/operator"
	    android:text="@string/ans1" />

	<Button
	    android:id="@+id/answer2"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_alignBaseline="@+id/answer1"
	    android:layout_alignBottom="@+id/answer1"
	    android:layout_toRightOf="@+id/answer1"
	    android:text="@string/ans2" />

	<Button
	    android:id="@+id/answer3"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_alignBaseline="@+id/answer2"
	    android:layout_alignBottom="@+id/answer2"
	    android:layout_below="@+id/text1"
	    android:layout_toRightOf="@+id/answer2"
	    android:text="@string/ans3" />

</RelativeLayout>